resolution expanding, navigation bar added

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <script src="MyLoader.js"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/build_webgl.data",
-        frameworkUrl: "Build/build_webgl.framework.js",
-        codeUrl: "Build/build_webgl.wasm",
+        dataUrl: "Build/build_webgl.data.gz",
+        frameworkUrl: "Build/build_webgl.framework.js.gz",
+        codeUrl: "Build/build_webgl.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "TSCRawData",
